--- a/views/table.ejs
+++ b/views/table.ejs
@@ -26,7 +26,7 @@
           <a class="nav-link" href="/table">Table</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/map">Map</a>
+          <a class="nav-link" href="/map">World Maps</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/country/null/Thailand">Country</a>
@@ -50,19 +50,19 @@
         <% Countrys.forEach(function(data){ %>
         <tr>
           <td><%= data.state %></td>
-          <%if(data.state != null){%>
+          <% if(data.state != ''){ %>
           <td>
             <a href="/country/<%= data.state %>/<%= data.country %>">
               <%= data.country %>
             </a>
           </td>
-          <%}else{%>
+          <% }else{ %>
           <td>
             <a href="/country/null/<%= data.country %>">
               <%= data.country %>
             </a>
           </td>
-          <%}%>
+          <% } %>
           <td><%= data.confirmed %></td>
           <td><%= data.recovered %></td>
           <td><%= data.deaths %></td>
