--- a/views/country.ejs
+++ b/views/country.ejs
@@ -17,11 +17,16 @@
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
         integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
         crossorigin=""></script>
+    <link rel="stylesheet" href="/stylesheets/app.css">
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-        <a class="navbar-brand" href="/">Navbar</a>
+    <nav class="navbar navbar-expand-sm navbar-dark bg-danger">
+        <a class="navbar-brand" href="/"><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-cloud-fill"
+                fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd"
+                    d="M4.406 3.342A5.53 5.53 0 0 1 8 2c2.69 0 4.923 2 5.166 4.579C14.758 6.804 16 8.137 16 9.773 16 11.569 14.502 13 12.687 13H3.781C1.708 13 0 11.366 0 9.318c0-1.763 1.266-3.223 2.942-3.593.143-.863.698-1.723 1.464-2.383z" />
+            </svg> Cloud</a>
         <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId"
             aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -43,8 +48,8 @@
 
     <div class="container mt-5 mb-5">
         <div class="display-4 text-center font-weight-bold"><%= Status.country %></div>
-        <div class="row text-center">
-            <div class="col-4 h3">
+        <div class="row text-center d-flex justify-content-around pl-1 pr-1">
+            <div class="col-3 h3 box">
                 <div class="">
                     Confirmed
                 </div>
@@ -52,7 +57,7 @@
                     <%= Status.confirmed %>
                 </div>
             </div>
-            <div class="col-4 h3">
+            <div class="col-3 h3 box">
                 <div class="">
                     Recovered
                 </div>
@@ -60,7 +65,7 @@
                     <%= Status.recovered %>
                 </div>
             </div>
-            <div class="col-4 h3">
+            <div class="col-3 h3 box">
                 <div class="">
                     Deaths
                 </div>
