--- a/views/map.ejs
+++ b/views/map.ejs
@@ -14,14 +14,19 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
         integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
         crossorigin="" />
+    <link rel="stylesheet" href="/stylesheets/app.css">
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
         integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
         crossorigin=""></script>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-        <a class="navbar-brand" href="/">Navbar</a>
+    <nav class="navbar navbar-expand-sm navbar-dark bg-danger">
+        <a class="navbar-brand" href="/"><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-cloud-fill"
+                fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd"
+                    d="M4.406 3.342A5.53 5.53 0 0 1 8 2c2.69 0 4.923 2 5.166 4.579C14.758 6.804 16 8.137 16 9.773 16 11.569 14.502 13 12.687 13H3.781C1.708 13 0 11.366 0 9.318c0-1.763 1.266-3.223 2.942-3.593.143-.863.698-1.723 1.464-2.383z" />
+            </svg> Cloud</a>
         <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId"
             aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -41,22 +46,34 @@
         </div>
     </nav>
 
-    <div class="container">
-        <div class="row">
-            <div class="col-4">
-                <div class="">World Total Confirmed</div>
-                <%= Totals.totalConfirmed %>
+    <div class="container mt-5">
+        <div class="row d-flex justify-content-around pl-1 pr-1 text-center">
+            <div class="col-3 Editbox1">
+                <div class="row text-center">
+                    <div class="col-11 font-weight-bold">World Total Confirmed
+                        <br>
+                        <%= Totals.totalConfirmed %>
+                    </div>
+                </div>
             </div>
-            <div class="col-4">
-                <div class="">World Total Recovered</div>
-                <%= Totals.totalRecovered %>
+            <div class="col-3 Editbox2 font-weight-bold">
+                <div class="row text-center">
+                    <div class="col-11">World Total Recovered
+                        <br>
+                        <%= Totals.totalRecovered %>
+                    </div>
+                </div>
             </div>
-            <div class="col-4">
-                <div class="">World Total Deaths</div>
-                <%= Totals.totalDeaths %>
+            <div class="col-3 Editbox3 font-weight-bold">
+                <div class="row text-center">
+                    <div class="col-11">World Total Deaths
+                        <br>
+                        <%= Totals.totalDeaths %>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="mt-5">
+        <div class="mt-5 mb-5">
             <div id="map" style="height: 500px;"></div>
         </div>
     </div>
